--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p>Welcome</p>
     <header>
         <h1>My Awesome Store</h1>
         <nav>
