--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p>Welcome</p>
+    <p>This is a Demo website which is used to understand the working of github</p>
     <header>
         <h1>My Awesome Store</h1>
         <nav>
